fix: graph alignment solved

--- a/style.css
+++ b/style.css
@@ -74,7 +74,7 @@ h2 {
 }
 
 .cell {
-  width: 100%;
+  /* width: 100%; */
   height: 100%;
 }
 
